--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "start-server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
-    "start": "concurrently \"tsc -w\" \"nodemon dist/start-server.js\"",
+    "start": "node dist/start-server.js",
+    "dev": "concurrently \"tsc -w\" \"nodemon dist/start-server.js\"",
+    "test": "cross-env NODE_ENV=test jest tests/.*.test.ts",
+    "test:unit": "cross-env NODE_ENV=test jest --watch \" test/unit.*\\.test\\.ts\"",
+    "test:e2e": "cross-env NODE_ENV=test jest --watch \" test/e2e.*\\.test\\.ts\"",
     "db:migrate": "npx sequelize-cli db:migrate"
   },
   "keywords": [],
@@ -17,11 +20,16 @@
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/pg": "^8.11.11",
     "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "sequelize-cli": "^6.6.2",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript-eslint": "^8.21.0"
   },
   "dependencies": {
