--- a/.github/workflows/deoloy.yml
+++ b/.github/workflows/deoloy.yml
@@ -45,7 +45,7 @@ jobs:
           path: ~/.npm
           key: ${{ env.CACHE_KEY }}-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Run server
         run: npm run start:prod & npx wait-on http://localhost:$PORT/
       - name: Run tests
